kubernetes/aws/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: req-counter-deployment
  namespace: req-counter-ns
  labels:
    deployment: req-counter
spec:
  replicas: 50
  selector:
    matchLabels:
      app: req-counter
  template:
    metadata:
      labels:
        app: req-counter
    spec:
      containers:
          - name: req-counter-container
            image: public.ecr.aws/t0r9e2c0/karnaudov/req-counter:latest
            resources:
              requests:
                cpu: "50m"         # Lower CPU request
                memory: "64Mi"      # Optional, lower memory request
              limits:
                cpu: "500m"
                memory: "256Mi"
            ports:
              - containerPort: 3000
                protocol: TCP
