kubernetes/aws/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  namespace: req-counter-ns
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: req-counter-service
                port:
                  number: 3000
            path: /
